<resources>
    <string name="app_name">Rick And Morty App</string>
    <string name="episodes">EPISoDeS</string>
    <string name="characters">ChARActERs</string>
    <string name="location">lOCAtiONs</string>
    <string name="image_description_episodes">image button episodes</string>
    <string name="image_description_characters">image button characters</string>
    <string name="image_description_location">image button location</string>
    <string name="image_characters">image character</string>
    <string name="ic_video_description">image video</string>
    <string name="id_characters">Character Number</string>
    <string name="name_episode">Name :</string>
    <string name="episode_season">Episode :</string>
    <string name="toast_character">Error, por favor intente de nuevo o verifique la conexion a internet</string>
    <string name="toast_episodes">Error, por favor intente de nuevo o verifique la conexion a internet</string>
    <string name="toast_location">Error, por favor intente de nuevo o verifique la conexion a internet</string>
    <string name="nameDetail">Name :</string>
    <string name="gender_character">Gender :</string>
    <string name="status_character">Status :</string>
    <string name="species_characters">Species :</string>
    <string name="created_details">Created :</string>
    <string name="origin_character">Origin :</string>
    <string name="image_description_characters_detail">image character</string>
    <string name="type_location">Type :</string>
    <string name="dimension_location_detail">Dimension :</string>
    <string name="ic_locations_descriptions">icon location</string>
    <string name="air_date">Air Date:</string>
    <string name="episode_description">Episode :</string>
</resources>