<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <ImageButton
        android:id="@+id/imageButtonCharacters"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image_description_characters"
        android:elevation="8dp"
        app:srcCompat="@mipmap/buttom_characters" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/characters"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imageButtonEpisode"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_description_episodes"
        android:elevation="8dp"
        app:srcCompat="@mipmap/ic_episode" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/episodes"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imageButtonLocations"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_description_location"
        android:elevation="8dp"
        app:srcCompat="@mipmap/button_locations" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>