<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".presentation.view.activity.DetailEpisodesActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/ic_video_description"
        android:src="@drawable/ic_video" />

    <androidx.appcompat.widget.LinearLayoutCompat style="@style/linear_layout_style">

        <TextView
            style="@style/detail_style_tittle"
            android:text="@string/nameDetail" />

        <TextView
            android:id="@+id/tvNameLocationDetail"
            style="@style/detail_style"
            tools:text="Pilot" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat style="@style/linear_layout_style">

        <TextView
            style="@style/detail_style_tittle"
            android:text="@string/air_date" />

        <TextView
            android:id="@+id/tvAirDateLocationDetail"
            style="@style/detail_style"
            tools:text="December 2, 2013" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat style="@style/linear_layout_style">

        <TextView
            style="@style/detail_style_tittle"
            android:text="@string/episode_description" />

        <TextView
            android:id="@+id/tvEpísodeLocationDetail"
            style="@style/detail_style"
            tools:text="S01E01" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat style="@style/linear_layout_style">

        <TextView
            style="@style/detail_style_tittle"
            android:text="@string/created_details" />

        <TextView
            android:id="@+id/tvCreatedLocationDetail"
            style="@style/detail_style"
            tools:text="2017-11-10T12:56:33.798Z" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
