<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".presentation.view.activity.DetailLocationsActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/ic_locations_descriptions"
        android:src="@drawable/ic_location" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <androidx.appcompat.widget.LinearLayoutCompat style="@style/linear_layout_style">

        <TextView
            style="@style/detail_style_tittle"
            android:text="@string/nameDetail" />

        <TextView
            android:id="@+id/tvNameLocationDetail"
            style="@style/detail_style"
            tools:text="Earth (C-137)" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat style="@style/linear_layout_style">

        <TextView
            style="@style/detail_style_tittle"
            android:text="@string/type_location" />

        <TextView
            android:id="@+id/tvNameTypeDetail"
            style="@style/detail_style"
            tools:text="Planet" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat style="@style/linear_layout_style">

        <TextView
            style="@style/detail_style_tittle"
            android:text="@string/dimension_location_detail" />

        <TextView
            android:id="@+id/tvNameDimensionDetail"
            style="@style/detail_style"
            tools:text="Dimension C-137" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat style="@style/linear_layout_style">

        <TextView
            style="@style/detail_style_tittle"
            android:text="@string/created_details" />

        <TextView
            android:id="@+id/tvNameCreatedDetail"
            style="@style/detail_style"
            tools:text="2017-11-10T12:42:04.162Z" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
