<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".DetailCharactersActivity">

    <ImageView
        android:id="@+id/ivImageCharacterDetail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/image_description_characters_detail"
        android:scaleType="centerCrop" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginEnd="8dp"
            android:text="@string/nameDetail"
            style="@style/detailsPageStyle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNameCharacterDetail"
            android:layout_marginEnd="12dp"
            style="@style/detailsPageStyle"
            tools:text="Rick Sanchez" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_marginEnd="8dp"
            android:text="@string/gender_character"
            style="@style/detailsPageStyle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGenderCharacterDetail"
            android:layout_marginEnd="12dp"
            style="@style/detailsPageStyle"
            tools:text="Male" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_marginEnd="8dp"
            android:text="@string/status_character"
            style="@style/detailsPageStyle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStatusCharacterDetail"
            android:layout_marginEnd="12dp"
            style="@style/detailsPageStyle"
            tools:text="Alive" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_marginEnd="8dp"
            android:text="@string/species_characters"
            style="@style/detailsPageStyle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSpecieCharacterDetail"
            android:layout_marginEnd="12dp"
            style="@style/detailsPageStyle"
            tools:text="Human" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_marginEnd="8dp"
            android:text="@string/created_details"
            style="@style/detailsPageStyle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCreateCharacterDetail"
            android:layout_marginEnd="12dp"
            style="@style/detailsPageStyle"
            tools:text="2017-11-04T18:48:46.250Z" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_marginEnd="8dp"
            android:text="@string/origin_character"
            style="@style/detailsPageStyle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOriginCharacterDetail"
            android:layout_marginEnd="12dp"
            style="@style/detailsPageStyle"
            tools:text="Earth (C-137)" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
